force-app/main/default/objects/SOA_Statement__c/SOA_Statement__c.object-meta.xml
<CustomObject>
    <description>Statement of Account</description>
    <label>SOA</label>
    <nameField>
        <label>SOA No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOA</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>