force-app/main/default/objects/SOA_Statement__c/fields/Account_lk__c.field-meta.xml
<CustomField>
    <fullName>Account_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account(Issue to)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SOA</relationshipLabel>
    <relationshipName>SOA</relationshipName>
    <type>Lookup</type>
</CustomField>