force-app/main/default/objects/SOA_Statement__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <label>SOA Issue Date</label>
    <type>Date</type>
</CustomField>