force-app/main/default/objects/SOA_Statement__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <label>Net Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>