force-app/main/default/objects/SOA_Statement__c/fields/NoteCount_rs__c.field-meta.xml
<CustomField>
    <fullName>NoteCount_rs__c</fullName>
    <label>Note Count</label>
    <summaryForeignKey>SOA_NoteJunction__c.SOA_md__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>