force-app/main/default/objects/SOA_Statement__c/fields/OriginCurrency__c.field-meta.xml
<CustomField>
    <fullName>OriginCurrency__c</fullName>
    <label>Origin Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>